// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Display Logic component false condition works 1`] = `
<div
  style={
    Object {
      "display": "none",
    }
  }
>
  <div
    className="child"
  />
</div>
`;

exports[`Display Logic component is div and prints children 1`] = `
<div
  style={
    Object {
      "display": "block",
    }
  }
>
  <div
    className="child"
  />
</div>
`;
